--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
           <div id="unity-progress-bar-full"></div>
         </div>
       </div>
-      <div id="unity-mobile-warning">
-        WebGL builds are not supported on mobile devices.
-      </div>
+      <div id="unity-warning"> </div>
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
@@ -26,24 +24,49 @@
       </div>
     </div>
     <script>
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/SMBS-1-2-tests.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/SMBS-1-2-tests.data",
-        frameworkUrl: buildUrl + "/SMBS-1-2-tests.framework.js",
-        codeUrl: buildUrl + "/SMBS-1-2-tests.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "superpi2",
-        productName: "Super Mario Bros. S",
-        productVersion: "0.2.0",
-      };
-
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
       var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var mobileWarning = document.querySelector("#unity-mobile-warning");
+      var warningBanner = document.querySelector("#unity-warning");
+
+      // Shows a temporary message banner/ribbon for a few seconds, or
+      // a permanent error message on top of the canvas if type=='error'.
+      // If type=='warning', a yellow highlight color is used.
+      // Modify or remove this function to customize the visually presented
+      // way that non-critical warnings and error messages are presented to the
+      // user.
+      function unityShowBanner(msg, type) {
+        function updateBannerVisibility() {
+          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+        }
+        var div = document.createElement('div');
+        div.innerHTML = msg;
+        warningBanner.appendChild(div);
+        if (type == 'error') div.style = 'background: red; padding: 10px;';
+        else {
+          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+          setTimeout(function() {
+            warningBanner.removeChild(div);
+            updateBannerVisibility();
+          }, 5000);
+        }
+        updateBannerVisibility();
+      }
+
+      var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/SuperMarioBrosSTests.loader.js";
+      var config = {
+        dataUrl: buildUrl + "/SuperMarioBrosSTests.data",
+        frameworkUrl: buildUrl + "/SuperMarioBrosSTests.framework.js",
+        codeUrl: buildUrl + "/SuperMarioBrosSTests.wasm",
+        streamingAssetsUrl: "StreamingAssets",
+        companyName: "superpi2",
+        productName: "Super Mario Bros. S",
+        productVersion: "0.2.0",
+        showBanner: unityShowBanner,
+      };
 
       // By default Unity keeps WebGL canvas render target size matched with
       // the DOM size of the canvas element (scaled by window.devicePixelRatio)
@@ -53,19 +76,30 @@
       // config.matchWebGLToCanvasSize = false;
 
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        // Mobile device style: fill the whole browser client area with the game canvas:
+
+        var meta = document.createElement('meta');
+        meta.name = 'viewport';
+        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+        document.getElementsByTagName('head')[0].appendChild(meta);
         container.className = "unity-mobile";
-        // Avoid draining fillrate performance on mobile devices,
-        // and default/override low DPI mode on mobile browsers.
-        config.devicePixelRatio = 1;
-        mobileWarning.style.display = "block";
-        setTimeout(() => {
-          mobileWarning.style.display = "none";
-        }, 5000);
+
+        // To lower canvas resolution on mobile devices to gain some
+        // performance, uncomment the following line:
+        // config.devicePixelRatio = 1;
+
+        canvas.style.width = window.innerWidth + 'px';
+        canvas.style.height = window.innerHeight + 'px';
+
+        unityShowBanner('WebGL builds are not supported on mobile devices.');
       } else {
+        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
+
         canvas.style.width = "1024px";
         canvas.style.height = "576px";
       }
-      canvas.style.background = "url('" + buildUrl + "/SMBS-1-2-tests.jpg') center / cover";
+
+      canvas.style.background = "url('" + buildUrl + "/SuperMarioBrosSTests.jpg') center / cover";
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
